crates/parser/src/tests/snapshots/parser__tests__tree_step__does_not_merge_trivia_into_composite_token.snap
---
source: crates/parser/src/tests/tree_step.rs
description: a- >b
expression: steps
---
[
    Ident("a"),
    Minus("-"),
    Whitespace(" "),
    Gt(">"),
    Ident("b"),
]
