crates/parser/src/tests/snapshots/parser__tests__tree_step__emits_composite_token_text.snap
---
source: crates/parser/src/tests/tree_step.rs
description: a->b
expression: steps
---
[
    Ident("a"),
    ThinArrow("->"),
    Ident("b"),
]
