crates/parser/src/tests/snapshots/parser__tests__tree_step__emits_error_with_copied_error.snap
---
source: crates/parser/src/tests/tree_step.rs
description: foo
expression: steps
---
[
    Error(Expected { expected: Colon, actual: Ident }, 0),
]
