crates/parser/src/tests/snapshots/parser__tests__tree_step__emits_hash_bang_as_leading_trivia.snap
---
source: crates/parser/src/tests/tree_step.rs
description: "#!/usr/bin/env autolang\nfoo"
expression: steps
---
[
    Comment("#!/usr/bin/env autolang"),
    Whitespace("\n"),
    Ident("foo"),
]
