crates/parser/src/tests/snapshots/parser__tests__tree_step__emits_inter_token_trivia.snap
---
source: crates/parser/src/tests/tree_step.rs
description: "foo : mod"
expression: steps
---
[
    Ident("foo"),
    Whitespace(" "),
    Colon(":"),
    Whitespace(" "),
    KwMod("mod"),
]
