crates/parser/src/tests/snapshots/parser__tests__tree_step__emits_leading_trivia.snap
---
source: crates/parser/src/tests/tree_step.rs
description: "  foo"
expression: steps
---
[
    Whitespace("  "),
    Ident("foo"),
]
