crates/parser/src/tests/snapshots/parser__tests__tree_step__emits_shebang_as_leading_trivia.snap
---
source: crates/parser/src/tests/tree_step.rs
description: "#!/usr/bin/env autolang\nfoo"
expression: steps
---
[
    Shebang("#!/usr/bin/env autolang"),
    Whitespace("\n"),
    Ident("foo"),
]
