crates/parser/src/tests/snapshots/parser__tests__tree_step__emits_trailing_trivia.snap
---
source: crates/parser/src/tests/tree_step.rs
description: foo // comment
expression: steps
---
[
    Ident("foo"),
    Whitespace(" "),
    Comment("// comment"),
]
