crates/parser/src/tests/snapshots/parser__tests__tree_step__emits_trailing_trivia_before_final_exit.snap
---
source: crates/parser/src/tests/tree_step.rs
description: "foo: mod; // trailing"
expression: steps
---
[
    Enter(SourceFile),
    Enter(ModuleInner),
    Enter(ModuleItem),
    Enter(Name),
    Ident("foo"),
    Exit,
    Colon(":"),
    Whitespace(" "),
    KwMod("mod"),
    Semi(";"),
    Exit,
    Exit,
    Whitespace(" "),
    Comment("// trailing"),
    Exit,
]
